[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "flask_frame"
version = "1.3.1"
description = "基于FLASK快速开发REST接口框架"
readme = "README.md"
license = "MIT"
authors = [
    {name = "wuhanchu", email = "whcwuhanchu@gmail.com"}
]
requires-python = ">=3.12"
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Framework :: Flask",
    "Intended Audience :: Developers",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
    "Topic :: Internet :: WWW/HTTP :: Dynamic Content",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Typing :: Typed",
]
dependencies = [
    # 核心 Web 框架及扩展
    "Flask==3.1.3",
    "flask_marshmallow==1.3.0",
    "marshmallow==3.26.2",
    "marshmallow-sqlalchemy==1.4.2",

    # 自动化
    "celery==5.5.1",

    # 性能与监控
    "pyinstrument==5.0.1",
    "sentry_sdk==2.26.1",

    # 网络与通信
    "Requests==2.32.3",
    "redis==5.2.1",

    # 数据库
    "Flask_SQLAlchemy==3.1.1",
    "SQLAlchemy==2.0.40",
    "psycopg2-binary==2.9.10",

    # 安全与加密
    "rsa==4.9",
    "pycryptodome==3.23.0",
    "cryptography==46.0.5",

    # 工具库
    "tenacity==9.1.2",
    "loguru==0.7.3",
    "pytz~=2025.2",
    "simplejson==3.20.2",
    "python-consul2==0.1.5",
    "minio==7.2.9",

    # OpenAPI 文档生成（sync_apifox CLI 需要）
    "flasgger==0.9.7.1",
]

[project.urls]
Homepage = "https://github.com/wuhanchu/flask_frame"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
flask_frame = ["py.typed"]
